# LFToolbox_Recolouring_HPR

./: CMakeLists.txt  OpticalFlow.cpp  OpticalFlow.h  README.md  dt.cpp  dt.h  get_cpm.m  main.cpp  match2flow.cpp  match_eval_dll.cpp  plotColours.m  plotColours_simple.m  plotMatches.m  recolour_centre_neighbour.m  sift.cpp  spares_matches_centre.m  sparse_matches_neighbours.m
HPR_fix/: hotPixelFix.m  hotPixelFix_corners.m
TinyVLib/: Census.h  DisparityIO.h  Fitting.h  Graph.h  Heap.h  Image.h  ImageFeature.h  ImageIO.h  ImageProcessing.h  ImagePyramid.h  Matrix.h  OpticFlow.h  OpticFlowIO.h  SLIC.h  SuperPixelGraph.h  SuperPixelTree.h  TreeFilter.h  Util.h  dir.h  project.h
recolour/: README.txt  Speed_up_details.txt  ctfunction.asv  ctfunction.m  ctfunction_corr.m  ctfunction_corr.m~  ctfunction_corr_parallel.m  ctfunction_corr_parallel_all.m  ctfunction_parallel.m  demo.asv  demo.m  demo_parallel.m  pixel_thing.m  utf8_fail
recolour/MATLAB/: gmmreg_L2_corr.m  gmmreg_rbf_L2.m  mg_initialize_config.m  mg_initialize_config_corr.m
recolour/MATLAB/GaussTransform/: CJianCost.c  GaussTransform.c  GaussTransform.m  GaussTransformCorr.m  mex_CJianCost.c  (+4 more)
recolour/OpenMPCode/: mex_mgRecolourParallelTPS.cpp  mex_mgRecolourParallelTPS.mexa64  mex_mgRecolourParallel_1.cpp  mex_mgRecolourParallel_1.mexa64  mex_mgRecolourParallel_Mask.cpp  mex_mgRecolourParallel_Mask.mexa64  mgRecolourPixels.m  mgRecolourPixelsRBF.m  mgRecolourPixels_Mask.m  mg_initialiseMexFilesOMP.m  mg_transform_tps_parallel.m
utils/flow-code-matlab/: flowToColor.m  test_show.m  test_show.m~
(+28 files in other folders)
